module-5/Homework/task2/app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /billing(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: billing
                port:
                  number: 8080
